# meta-feeder-common

./: Cargo.toml  README.md
.github/workflows/: publish.yml
feeder-plugin/common-feeder/: Cargo.toml  Dockerfile
feeder-plugin/common-feeder/src/: giphy.rs  lib.rs  main.rs  wikicommons.rs
